# Kamisato

./: .gitignore  README.md  pyproject.toml  requirements.txt  schema.sql
kamisato/: __init__.py  __main__.py  types.py  util.py
kamisato/data/: daily.json
kamisato/ext/: artifact.py  data.py  dev.py  misc.py  timers.py
