[tool.poetry]
name = "kamisato"
version = "0.1.0"
description = "A Discord bot for Genshin Impact players"
authors = ["Maya <17090652+XuaTheGrate@users.noreply.github.com>"]
license = "AGPL v3.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py", branch="master"}
toml = "^0.10.2"
tabulate = "0.8.9"
asyncpg = "^0.25.0"

[tool.poetry.extras]
"discord.py" = ["speed"]
aiohttp = ["speedups"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
